[gd_scene load_steps=6 format=3 uid="uid://p3mtlr6mw02d"]

[ext_resource type="Script" path="res://world/door/door.gd" id="1_dobu0"]
[ext_resource type="Texture2D" uid="uid://csvaovqn2fl71" path="res://world/sprites/door.png" id="1_khxyx"]
[ext_resource type="Texture2D" uid="uid://878rryqj687u" path="res://world/sprites/door_open.png" id="2_bhhva"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4rom"]
size = Vector2(16, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arr6c"]
size = Vector2(8, 128)

[node name="door" type="Area2D" groups=["door"]]
scale = Vector2(1.25, 1.25)
script = ExtResource("1_dobu0")

[node name="collision_door" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k4rom")

[node name="closed_static" type="StaticBody2D" parent="."]
position = Vector2(0, -64)

[node name="collision_static" type="CollisionShape2D" parent="closed_static"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_arr6c")
debug_color = Color(0.913725, 0.278431, 0.223529, 0.419608)

[node name="closed_door" type="Sprite2D" parent="."]
texture = ExtResource("1_khxyx")

[node name="open_door" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_bhhva")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
